--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -183,21 +183,21 @@ immutability=1
 plugin=org.kde.plasma.mediacontroller_plus
 
 [Containments][15][Applets][123][Configuration]
-PreloadWeight=0
+PreloadWeight=42
 
 [Containments][15][Applets][124]
 immutability=1
 plugin=org.kde.plasma.mediacontroller
 
 [Containments][15][Applets][124][Configuration]
-PreloadWeight=0
+PreloadWeight=42
 
 [Containments][15][Applets][16]
 immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][15][Applets][16][Configuration]
-PreloadWeight=30
+PreloadWeight=22
 
 [Containments][15][Applets][17]
 immutability=1
@@ -211,7 +211,7 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][15][Applets][18][Configuration]
-PreloadWeight=35
+PreloadWeight=27
 
 [Containments][15][Applets][19]
 immutability=1
@@ -236,7 +236,7 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][15][Applets][28][Configuration]
-PreloadWeight=98
+PreloadWeight=90
 
 [Containments][15][Applets][28][Configuration][ConfigDialog]
 DialogHeight=540
@@ -339,9 +339,10 @@ PreloadWeight=0
 
 [Containments][4][Applets][12][Configuration][Appearance]
 customDateFormat=M-dd
+dateFormat=longDate
 enabledCalendarPlugins=/usr/lib/qt/plugins/plasmacalendarplugins/holidaysevents.so
 showSeconds=true
-use24hFormat=2
+use24hFormat=0
 
 [Containments][4][Applets][12][Configuration][ConfigDialog]
 DialogHeight=558
@@ -352,7 +353,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=100
+PreloadWeight=92
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
