--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -104,7 +104,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:firefox.desktop,applications:org.kde.konsole.desktop,applications:emacs.desktop,applications:idea.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,file:///home/kiteab/Desktop/beatoraja.desktop,applications:hmcl-bin.desktop,applications:telegramdesktop.desktop,file:///usr/share/applications/discord.desktop,applications:com.qq.tim.spark.desktop,applications:thunderbird.desktop,applications:virtualbox.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:electron-netease-cloud-music.desktop,applications:gimp.desktop,applications:org.kde.krita.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:firefox.desktop,applications:org.kde.konsole.desktop,applications:emacs.desktop,applications:idea.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,file:///home/kiteab/Desktop/beatoraja.desktop,applications:hmcl.desktop,applications:telegramdesktop.desktop,file:///usr/share/applications/discord.desktop,applications:com.qq.tim.spark.desktop,applications:thunderbird.desktop,applications:virtualbox.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:electron-netease-cloud-music.desktop,applications:gimp.desktop,applications:org.kde.krita.desktop,file:///latte-separator1.desktop
 
 [Containments][1][Applets][49]
 immutability=1
@@ -136,6 +136,7 @@ backgroundRadius=20
 backgroundShadowSize=8
 durationTime=x1
 iconSize=38
+lengthExtMargin=7
 maxLength=80
 panelSize=100
 panelTransparency=20
@@ -183,14 +184,14 @@ immutability=1
 plugin=org.kde.plasma.mediacontroller_plus
 
 [Containments][15][Applets][123][Configuration]
-PreloadWeight=10
+PreloadWeight=0
 
 [Containments][15][Applets][124]
 immutability=1
 plugin=org.kde.plasma.mediacontroller
 
 [Containments][15][Applets][124][Configuration]
-PreloadWeight=10
+PreloadWeight=0
 
 [Containments][15][Applets][16]
 immutability=1
@@ -236,7 +237,7 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][15][Applets][28][Configuration]
-PreloadWeight=90
+PreloadWeight=100
 
 [Containments][15][Applets][28][Configuration][ConfigDialog]
 DialogHeight=540
@@ -275,7 +276,7 @@ immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][15][Applets][34][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][15][Applets][34][Configuration][ConfigDialog]
 DialogHeight=540
@@ -353,7 +354,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=92
+PreloadWeight=100
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
