--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -104,7 +104,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:firefox.desktop,applications:org.kde.konsole.desktop,applications:emacs.desktop,applications:idea.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,file:///home/kiteab/Desktop/beatoraja.desktop,applications:hmcl.desktop,applications:telegramdesktop.desktop,file:///usr/share/applications/discord.desktop,applications:com.qq.tim.spark.desktop,applications:thunderbird.desktop,applications:virtualbox.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:electron-netease-cloud-music.desktop,applications:gimp.desktop,applications:org.kde.krita.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:firefox.desktop,applications:org.kde.konsole.desktop,applications:emacs.desktop,applications:idea.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,file:///home/kiteab/Desktop/beatoraja.desktop,applications:hmcl-bin.desktop,applications:telegramdesktop.desktop,file:///usr/share/applications/discord.desktop,applications:com.qq.weixin.deepin.desktop,applications:com.qq.tim.spark.desktop,applications:thunderbird.desktop,applications:virtualbox.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:electron-netease-cloud-music.desktop,applications:gimp.desktop,applications:org.kde.krita.desktop,file:///latte-separator1.desktop
 
 [Containments][1][Applets][49]
 immutability=1
@@ -136,7 +136,6 @@ backgroundRadius=20
 backgroundShadowSize=8
 durationTime=x1
 iconSize=38
-lengthExtMargin=7
 maxLength=80
 panelSize=100
 panelTransparency=20
@@ -198,21 +197,21 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][15][Applets][16][Configuration]
-PreloadWeight=22
+PreloadWeight=32
 
 [Containments][15][Applets][17]
 immutability=1
 plugin=org.kde.plasma.clipboard
 
 [Containments][15][Applets][17][Configuration]
-PreloadWeight=0
+PreloadWeight=15
 
 [Containments][15][Applets][18]
 immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][15][Applets][18][Configuration]
-PreloadWeight=27
+PreloadWeight=62
 
 [Containments][15][Applets][19]
 immutability=1
@@ -336,7 +335,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][12][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][4][Applets][12][Configuration][Appearance]
 customDateFormat=M-dd
@@ -362,7 +361,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=5
+PreloadWeight=15
 
 [Containments][4][Applets][8]
 immutability=1
