--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -78,7 +78,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][1][Applets][122][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 activityId=
 formfactor=0
 immutability=1
@@ -192,12 +192,19 @@ plugin=org.kde.plasma.mediacontroller_plus
 [Containments][15][Applets][124][Configuration]
 PreloadWeight=0
 
+[Containments][15][Applets][125]
+immutability=1
+plugin=org.kde.plasma.bluetooth
+
+[Containments][15][Applets][125][Configuration]
+PreloadWeight=100
+
 [Containments][15][Applets][16]
 immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][15][Applets][16][Configuration]
-PreloadWeight=26
+PreloadWeight=31
 
 [Containments][15][Applets][17]
 immutability=1
@@ -307,6 +314,7 @@ extraItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.networ
 hiddenItems=KMix,org.kde.plasma.notifications
 knownItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod
 scaleIconsToFit=true
+shownItems=org.kde.plasma.bluetooth
 
 [Containments][4]
 activityId=
@@ -361,7 +369,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=44
+PreloadWeight=54
 
 [Containments][4][Applets][8]
 immutability=1
