--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -9,10 +9,10 @@ enableKWinEdges=true
 formfactor=2
 immutability=1
 isPreferredForShortcuts=false
-lastScreen=10
+lastScreen=11
 location=4
 name=
-onPrimary=true
+onPrimary=false
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
 raiseOnDesktopChange=false
@@ -51,7 +51,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][1][Applets][121][Configuration]
-PreloadWeight=10
+PreloadWeight=0
 activityId=
 formfactor=0
 immutability=1
@@ -78,7 +78,7 @@ plugin=org.kde.plasma.folder
 wallpaperplugin=
 
 [Containments][1][Applets][122][Configuration]
-PreloadWeight=9
+PreloadWeight=0
 activityId=
 formfactor=0
 immutability=1
@@ -184,12 +184,15 @@ PreloadWeight=0
 immutability=1
 plugin=org.kde.kscreen
 
+[Containments][15][Applets][123][Configuration]
+PreloadWeight=42
+
 [Containments][15][Applets][125]
 immutability=1
 plugin=org.kde.plasma.bluetooth
 
 [Containments][15][Applets][125][Configuration]
-PreloadWeight=92
+PreloadWeight=84
 
 [Containments][15][Applets][126]
 immutability=1
@@ -210,21 +213,21 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][15][Applets][16][Configuration]
-PreloadWeight=53
+PreloadWeight=45
 
 [Containments][15][Applets][17]
 immutability=1
 plugin=org.kde.plasma.clipboard
 
 [Containments][15][Applets][17][Configuration]
-PreloadWeight=100
+PreloadWeight=92
 
 [Containments][15][Applets][18]
 immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][15][Applets][18][Configuration]
-PreloadWeight=48
+PreloadWeight=80
 
 [Containments][15][Applets][19]
 immutability=1
@@ -242,7 +245,7 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][15][Applets][21][Configuration]
-PreloadWeight=100
+PreloadWeight=92
 
 [Containments][15][Applets][28]
 immutability=1
@@ -332,10 +335,10 @@ enableKWinEdges=true
 formfactor=2
 immutability=1
 isPreferredForShortcuts=false
-lastScreen=10
+lastScreen=11
 location=3
 name=
-onPrimary=true
+onPrimary=false
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
 raiseOnDesktopChange=false
@@ -352,7 +355,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][12][Configuration]
-PreloadWeight=1
+PreloadWeight=0
 
 [Containments][4][Applets][12][Configuration][Appearance]
 customDateFormat=M-dd
@@ -378,7 +381,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=100
+PreloadWeight=92
 
 [Containments][4][Applets][8]
 immutability=1
