--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -104,7 +104,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:firefox.desktop,applications:emacs.desktop,applications:jetbrains-idea.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,applications:net.lutris.Lutris.desktop,applications:hmcl-bin.desktop,file:///usr/share/applications/discord.desktop,applications:qq.desktop,applications:unityhub.desktop,applications:virtualbox.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:electron-netease-cloud-music.desktop,applications:gimp.desktop,applications:org.kde.krita.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:firefox.desktop,applications:emacs.desktop,applications:jetbrains-idea.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,applications:net.lutris.Lutris.desktop,applications:hmcl-bin.desktop,applications:org.prismlauncher.PrismLauncher.desktop,file:///usr/share/applications/discord.desktop,applications:qq.desktop,applications:unityhub.desktop,applications:virtualbox.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:electron-netease-cloud-music.desktop,applications:gimp.desktop,applications:org.kde.krita.desktop,file:///latte-separator1.desktop
 
 [Containments][1][Applets][49]
 immutability=1
@@ -222,7 +222,7 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][15][Applets][16][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][15][Applets][17]
 immutability=1
@@ -254,7 +254,7 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][15][Applets][28][Configuration]
-PreloadWeight=52
+PreloadWeight=77
 
 [Containments][15][Applets][28][Configuration][ConfigDialog]
 DialogHeight=540
@@ -357,7 +357,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=57
+PreloadWeight=87
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
